// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle duplicate keywords 1`] = `
Array [
  PostKeyword {
    "keyword": "nodejs",
  },
  PostKeyword {
    "keyword": "vue",
  },
]
`;

exports[`should handle duplicate keywords 2`] = `
Array [
  Keyword {
    "status": "pending",
    "value": "nodejs",
  },
  Keyword {
    "status": "pending",
    "value": "vue",
  },
]
`;

exports[`should ignore numerical only keywords 1`] = `
Array [
  PostKeyword {
    "keyword": "nodejs",
  },
  PostKeyword {
    "keyword": "vue",
  },
]
`;

exports[`should ignore numerical only keywords 2`] = `
Array [
  Keyword {
    "status": "pending",
    "value": "nodejs",
  },
  Keyword {
    "status": "pending",
    "value": "vue",
  },
]
`;

exports[`should increase occurrences by one when keyword exists 1`] = `
Array [
  PostKeyword {
    "keyword": "nodejs",
  },
  PostKeyword {
    "keyword": "vue",
  },
]
`;

exports[`should increase occurrences by one when keyword exists 2`] = `
Array [
  Keyword {
    "occurrences": 2,
    "status": "allow",
    "value": "nodejs",
  },
  Keyword {
    "occurrences": 1,
    "status": "pending",
    "value": "vue",
  },
]
`;

exports[`should keep html-like text 1`] = `
Object {
  "authorId": null,
  "banned": false,
  "canonicalUrl": null,
  "comments": 0,
  "createdAt": Any<Date>,
  "creatorTwitter": null,
  "discussionScore": null,
  "id": Any<String>,
  "image": null,
  "lastTrending": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "score": Any<Number>,
  "sentAnalyticsReport": true,
  "shortId": Any<String>,
  "siteTwitter": null,
  "sourceId": "a",
  "tagsStr": null,
  "title": "Here is my <progress> element",
  "trending": null,
  "tweeted": false,
  "upvotes": 0,
  "url": "https://post.com",
  "views": 0,
  "viewsThreshold": 0,
}
`;

exports[`should match post to author 1`] = `
Object {
  "authorId": "1",
  "banned": false,
  "canonicalUrl": null,
  "comments": 0,
  "createdAt": Any<Date>,
  "creatorTwitter": "@Idoshamun",
  "discussionScore": null,
  "id": Any<String>,
  "image": null,
  "lastTrending": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "score": Any<Number>,
  "sentAnalyticsReport": false,
  "shortId": Any<String>,
  "siteTwitter": null,
  "sourceId": "a",
  "tagsStr": null,
  "title": "Title",
  "trending": null,
  "tweeted": false,
  "upvotes": 0,
  "url": "https://post.com",
  "views": 0,
  "viewsThreshold": 0,
}
`;

exports[`should match post to author based on username 1`] = `
Object {
  "authorId": "1",
  "banned": false,
  "canonicalUrl": null,
  "comments": 0,
  "createdAt": Any<Date>,
  "creatorTwitter": "@idoshamun",
  "discussionScore": null,
  "id": Any<String>,
  "image": null,
  "lastTrending": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "score": Any<Number>,
  "sentAnalyticsReport": false,
  "shortId": Any<String>,
  "siteTwitter": null,
  "sourceId": "a",
  "tagsStr": null,
  "title": "Title",
  "trending": null,
  "tweeted": false,
  "upvotes": 0,
  "url": "https://post.com",
  "views": 0,
  "viewsThreshold": 0,
}
`;

exports[`should not match post to author 1`] = `
Object {
  "authorId": null,
  "banned": false,
  "canonicalUrl": null,
  "comments": 0,
  "createdAt": Any<Date>,
  "creatorTwitter": "@nouser",
  "discussionScore": null,
  "id": Any<String>,
  "image": null,
  "lastTrending": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "score": Any<Number>,
  "sentAnalyticsReport": true,
  "shortId": Any<String>,
  "siteTwitter": null,
  "sourceId": "a",
  "tagsStr": null,
  "title": "Title",
  "trending": null,
  "tweeted": false,
  "upvotes": 0,
  "url": "https://post.com",
  "views": 0,
  "viewsThreshold": 0,
}
`;

exports[`should replace synonym keywords 1`] = `
Array [
  PostKeyword {
    "keyword": "nodejs",
  },
  PostKeyword {
    "keyword": "vue",
  },
]
`;

exports[`should replace synonym keywords 2`] = `
Array [
  Keyword {
    "status": "synonym",
    "value": "node",
  },
  Keyword {
    "status": "allow",
    "value": "nodejs",
  },
  Keyword {
    "status": "pending",
    "value": "vue",
  },
]
`;

exports[`should save a new post with basic information 1`] = `
Object {
  "authorId": null,
  "banned": false,
  "canonicalUrl": null,
  "comments": 0,
  "createdAt": Any<Date>,
  "creatorTwitter": null,
  "discussionScore": null,
  "id": Any<String>,
  "image": null,
  "lastTrending": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "score": Any<Number>,
  "sentAnalyticsReport": true,
  "shortId": Any<String>,
  "siteTwitter": null,
  "sourceId": "a",
  "tagsStr": null,
  "title": "Title",
  "trending": null,
  "tweeted": false,
  "upvotes": 0,
  "url": "https://post.com",
  "views": 0,
  "viewsThreshold": 0,
}
`;

exports[`should save a new post with full information 1`] = `
Object {
  "authorId": null,
  "banned": false,
  "canonicalUrl": null,
  "comments": 0,
  "createdAt": Any<Date>,
  "creatorTwitter": "creator",
  "discussionScore": null,
  "id": Any<String>,
  "image": "https://image.com",
  "lastTrending": null,
  "placeholder": "data:image/jpeg;base64,placeholder",
  "publishedAt": 2020-06-11T01:17:00.000Z,
  "ratio": 2,
  "readTime": 5,
  "score": Any<Number>,
  "sentAnalyticsReport": true,
  "shortId": Any<String>,
  "siteTwitter": "site",
  "sourceId": "a",
  "tagsStr": "javascript,html",
  "title": "Title",
  "trending": null,
  "tweeted": false,
  "upvotes": 0,
  "url": "https://post.com",
  "views": 0,
  "viewsThreshold": 0,
}
`;

exports[`should save a new post with full information 2`] = `
Array [
  PostTag {
    "tag": "webdev",
  },
  PostTag {
    "tag": "javascript",
  },
  PostTag {
    "tag": "html",
  },
]
`;

exports[`should save keywords 1`] = `
Array [
  PostKeyword {
    "keyword": "nodejs",
  },
  PostKeyword {
    "keyword": "vue",
  },
]
`;

exports[`should save keywords 2`] = `
Array [
  Keyword {
    "status": "pending",
    "value": "nodejs",
  },
  Keyword {
    "status": "pending",
    "value": "vue",
  },
]
`;

exports[`should unescape html text 1`] = `
Object {
  "authorId": null,
  "banned": false,
  "canonicalUrl": null,
  "comments": 0,
  "createdAt": Any<Date>,
  "creatorTwitter": null,
  "discussionScore": null,
  "id": Any<String>,
  "image": null,
  "lastTrending": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "score": Any<Number>,
  "sentAnalyticsReport": true,
  "shortId": Any<String>,
  "siteTwitter": null,
  "sourceId": "a",
  "tagsStr": null,
  "title": "It's ok jQuery, I still love you",
  "trending": null,
  "tweeted": false,
  "upvotes": 0,
  "url": "https://post.com",
  "views": 0,
  "viewsThreshold": 0,
}
`;
